translate blog content and part of docs

--- a/i18n/pt/docusaurus-plugin-content-blog-news/2021/10-05-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2021/10-05-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 02-news-release
-title: October 2021 Release
+title: Versão de outubro de 2021 disponível
 authors: adi1090x
 tags: [v21.10, release, iso]
 hide_table_of_contents: true
