--- a/i18n/pt/docusaurus-plugin-content-blog-news/2021/11-30-release-xfce.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2021/11-30-release-xfce.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 03-news-release
-title: Archcraft XFCE Release
+title: Versão do Archcraft XFCE
 authors: adi1090x
 tags: [flavor, xfce, release, iso]
 hide_table_of_contents: true
