--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/02-02-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/02-02-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 04-news-release
-title: February 2022 Release
+title: Versão de fevereiro de 2022
 authors: adi1090x
 tags: [v22.02, release, iso]
 hide_table_of_contents: true
@@ -25,8 +25,8 @@ ISO do Archcraft de fevereiro de 2022 disponível para download. Veja o que há 
 
 ### Changelog
 
-- Updated Alacritty Configs
-- Updated Dunst Configs
-- Updated Few Scripts
-- Updated the configs for all Window Managers
-- Screenshots in clipboard
+- Configurações do Alacrutty atualizadas
+- Configurações do Dunst atualizadas
+- Scripts do Few atualizados
+- Atualizadas as Configuraçõesde todos os Window Managers
+- Screenshots no clipboard
