--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/04-07-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/04-07-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 05-news-release
-title: April 2022 Release
+title: Versão de abril de 2022
 authors: adi1090x
 tags: [v22.04, release, iso]
 hide_table_of_contents: true
@@ -19,27 +19,27 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-April 2022 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de abril de 2022 está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelog
 
-- Removed a bunch of useless packages (`pamac`, `pcmanfm`, `leafpad`, `bmon`, `bashtop`, `neovim` and a lot more)
-- Updated all packages and window managers
-- Few minor changes in `Openbox`
-  - Updated style scripts (fixed dunst, added option for auto effects)
-  - Removed quick CMDs
-  - Removed extra polybars, rofi menus (launchers and powermenu)
-  - Removed pipemenus for launcher, powermenu, polybar, wallpaper generator
-- Few minor changes in `BSPWM`
-  - Using Thunar as default file manager
-  - Changed terminal fonts
-- Removed network applets from all window managers
-- Fixed network menu height and password visibility in all WMs
-- Fixed messed up dunst layout in all WMs
-- Updated ABIF installer to fix user creation
-- Removed neovim (Nvchad config, as it breaks very often)
-- Using a single lockscreen for all WMs
-- Removed few scripts such as `tasks`, `color-picker`, `wallpaper-generator`, etc.
-- And more..., Basically cleaned up the system and removed useless stuff.
+- Removido um monte de pacote desnecessário (`pamac`, `pcmanfm`, `leafpad`, `bmon`, `bashtop`, `neovim` e muito mais)
+- Todos os pacotes e window managers atualizados
+- Pequenas mudanças no `Openbox`
+  - Estilo dos scrpts atualizados (dunst consertado, adicionado a opção para efeitos automáticos)
+  - CMDs rápidos removidos
+  - Polybars e rofi menus extras removidos (lancadores e powermenu)
+  - Removido pipemenus para laçador, powermenu, polybar, gerador de wallpaper
+- Pequenas mudanças no `BSPWM`
+  - Usando o Thunar como gestor de arquivos padrão
+  - Troca de fontes no tertminal
+- Removido network applets de todos os window managers
+- Ajustado a largura do menu de network menu height e a visibilidade das senhas em todos os WMs
+- Resolvido a bagunça no layout do dunst em todos os WMs
+- Instalador ABIF atualizado para corrigir a criação de usuário
+- Neovim removido (Nvchad config, estava quebrando com frequencia)
+- Usando um único lockscreen para todos os WMs
+- Removido alguns scripts como `tasks`, `color-picker`, `wallpaper-generator`, etc.
+- E mais..., Basicamente o sistema foi limpo e foi removido coisas inúteis.
