--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/06-08-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/06-08-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 06-news-release
-title: June 2022 Release
+title: Versão de junho de 2022
 authors: adi1090x
 tags: [v22.06, release, iso]
 hide_table_of_contents: true
@@ -19,14 +19,14 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-June 2022 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de junho de 2022 está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Fixed plymouth theme issue
-- Updated default Kernel parameters for grub
-- Slime theme is back for both WMs
-- Updated neofetch Ascii
-- Updated the packages
-- Not much
+- Corrigido o problema no tema plymouth
+- Atualizados os parâmetros do kernel padrão para gub
+- Tema Slime está de volta em ambos os WMs
+- neofetch Ascii atualizado
+- Pacotes atualizados
+- Nada demais
