--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/07-18-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/07-18-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 07-news-release
-title: July 2022 Release
+title: Versão de julho de 2022
 authors: adi1090x
 tags: [v22.07, release, iso]
 hide_table_of_contents: true
@@ -19,20 +19,20 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-July 2022 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO de julho de 2022 está disponível para downnload. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-July release fixes a bunch of issue, updated packages etc.
+Lançamento de julho corrigiu vários preblemas, pacotes atualizados, etc.
 
 ### Changelogs :
-- Updated the **ISO base** according to `archiso 65-1` (grub for UEFI boot)
-- Using `zstd` compression for mkinitcpio
-- Fixed `consolefont` and other warning on init generation
-- Updated **sddm config** files and naming convention
-- Updated users and groups related files
-- Fixed `openbox` as default session issue in sddm 
-- Updated all scripts and config files for all WMs
-- **`New BSPWM`** : Recreated base config, scripts and **New Theme Engine (Infinite Themes)** 
-- Added an **Easy Mode** in `openbox`, with bigger icons, fonts and UI elements.
+- A **base ISO** foi atualizada de acordo com `archiso 65-1` (grub para boot UEFI)
+- Usando compressão `zstd` para mkinitcpio
+- Corrigido o `consolefont` e outros avisos na geração do init
+- Atualizados os arquivos **sddm config** e convenção de nomenclatura
+- Atualizados os arquivos relacionados a usuários e grupos
+- Corrigido o problema do `openbox` como sessão padrão no sddm 
+- Atualizados todos os scripts e arquivos de configuração para todos os WMs
+- **`Novo BSPWM`** : Recriados a configuraçãobase, scripts e **Nova Theme Engine (Infinite Themes)** 
+- Adicionado o **Modo Fácil** no `openbox`, com ícones grandes, fontes e elementos UI
 - Etc
