--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/09-16-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/09-16-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 08-news-release
-title: September 2022 Release
+title: Versão de setembro de 2022
 authors: adi1090x
 tags: [v22.09, release, iso]
 hide_table_of_contents: true
@@ -19,11 +19,11 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-September 2022 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de setembro de 2022 está disponível para Download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated the ISO with latest packages
-- Fixed Rofi menu and applets issue
-- Fixed Minor bugs, etc
+- Atualização da ISO com pacotes atualizados
+- Corrigido o problema do Rofi Menu e dos applets
+- Correção de pequenos bugs, etc
