--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/10-10-release-lxde.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/10-10-release-lxde.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 10-news-release
-title: Archcraft LXDE Release
+title: Versão do Archcraft LXDE
 authors: adi1090x
 tags: [flavor, lxde, release, iso]
 hide_table_of_contents: true
@@ -19,29 +19,29 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-LXDE Flavor of Archcraft is now available to download. Read the changelogs below to know what's new.
+Sabor LXDE do Archcraft está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This flavor of Archcraft comes with LXDE.<br/>
-LXDE is a desktop environment with comparatively low resource requirements.
-This makes it especially suitable for use on older or resource-constrained personal computers such as netbooks or system on a chip computers.
+Esse sabor do Archcraftvem com LXDE.<br/>
+LXDE é um ambiente gráfico com, comparativamente, pouco requerimento de recursos.
+Isso o faz especialmente adequado para computadores pessoais antigos ou com restrição de recursos.
 
 ### Changelogs :
-- Created the ISO base from scratch
-- Grub2 bootloader with themes
-- Customized Plymouth & LXDM
-- Full LXDE Desktop with needed tools
-- Basic Applications Only, No Bloatware
-- Calamares Installer (Graphical)
-- Full Network Manager Support, Various VPN plugins
-- Built-in Bluetooth Support
-- Pipewire For Sound/Audio (Systemwide, Bluetooth, Jack)
-- Built-in Printer Support
-- Almost All Audio, Video and Image Codecs
-- Full File manager functionality (Mounting, Networking, Archiving, etc)
-- Built-in AUR support
-- Minimal User Interface
-- Multiple Desktop Styles
-- Archcraft Icons, Themes, Wallpapers, Fonts
+- ISO criada do zero
+- Grub2 bootloader com temas
+- Plymouth & LXDM customizados
+- LXDE Desktop completo com ferramentas necessárias
+- Somente aplicações básicas, sem programas desnecessários
+- Instalador Calamares (Gráfico)
+- Suporte completo para Network Manager, Muitos plugins de VPN
+- Suporte para Bluetooth integrado
+- Pipewire para Som/Áudio (Systemwide, Bluetooth, Jack)
+- Suporte para impressora integrado
+- Quase todos os codes de ádio, vídeo e imagem
+- Total funcionalidade do gestor de arquivos (Montagem, Networking, Arquivamento, etc)
+- Suporte para o AUR integrado
+- Interface do usuário mínima
+- Muitos estilos de Desktop
+- Ícones, temas, Wallpapers, fontes do Archcraft
 - Etc
