--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-01-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-01-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 12-news-release
-title: January 2023 Release
+title: Versão de janeiro de 2023
 authors: adi1090x
 tags: [v23.01, release, iso]
 hide_table_of_contents: true
@@ -19,24 +19,24 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-January 2023 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de janeiro de 2023 está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-**`Major Release`**
+**`Principal Release`**
 
-> You need to re-install Archcraft for this update. After that, you can update to next release with `pacman`
+> Você precisa reinstalar o Archcraft para essa atualização. Depois disso, você pode atualizar para a próxima versão com `pacman`
 
 ### Changelogs :
-- Created the ISO base from scratch
-- Better Network Manager Support, Various VPN plugins
-- Better Bluetooth Support
-- Pipewire For Sound/Audio (Systemwide, Bluetooth, Jack)
-- Better Printer Support
-- Almost All Audio, Video and Image Codecs
-- Better File manager functionality (Mounting, Networking, Archiving, etc)
-- Better multi-monitor support
-- CJK fonts pre-installed
-- New themes for both openbox and bspwm
-- Creating user themes are super easy now
-- So many minor changes, etc.
+- ISO criada do zero
+- Suporte para Network Manager melhorado, vários plugins para VPN
+- Suporte para Bluetooth melhorado
+- Pipewire para Som/Áudio (Systemwide, Bluetooth, Jack)
+- Suporte para impressora melhorado
+- Quase todos os codecs de áudio, vídeo e imagem
+- Funcionalidade do gestor de arquivos melhorada(Montagem, Networking, Arquivamento, etc)
+- Suporte para multi monitor melhorado
+- Fontes CJK pre instaladas
+- Novos temas para openbox e bspwm
+- Criação de temas pelo usuário é muito fácil agora
+- Mais algumas pequenas mudanças, etc.
