--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-10-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-10-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 13-news-release
-title: Archcraft WSE Release
+title: Lançamento Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,23 +19,23 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> New **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusivo</Highlight> Nova **ISO Archcraft Edição Especial Wayland** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Essa edição especial do Archcraft vem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm) pré instalado, pré configurado e traz uma experiência única do Linux com wayland.
 
 ### Changelogs :
-- Added ABIF (CLI) installer
-- Updated the base system
-- Updated All the compositors
-- Bug fixes, etc
+- Adicionado instalador ABIF (CLI)
+- Atualizada a base do sistema
+- Atualizados todos os compositores
+- Erros corrigidos, etc
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+**Download :** Você pode baixar a ISO mais recente no [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta sua ISO atualizada :**  Siga os passos abaixo para garantir seus arquivos atualizados (ou refaça o download dos arquivos) de graça:
+- Faça Login na sua conta do Ko-fi
+- Vá para o seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver Detalhes`
+- Depois, Click em `Ver Conteúdo` para baixar os arquivos atualizados.
