--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-20-release-xfce.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-20-release-xfce.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 14-news-release
-title: Archcraft XFCE Release
+title: Lançamento Archcraft XFCE
 authors: adi1090x
 tags: [flavor, xfce, release, iso]
 hide_table_of_contents: true
@@ -19,12 +19,12 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft XFCE is now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft XFCE está disponível para download. Veja abixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO Base
-- Created New Theming System
-- User Can Create Their Own Themes Easily
-- Bug Fixes, Etc.
+- Atualizada a base da ISO
+- Criado novo sistema de tema
+- Usuários podem criar seus próprios temas facilmente
+- Correção de Bugs , Etc.
