--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-02-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-02-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 16-news-release
-title: April 2023 Release
+title: Versão de Abril de 2023
 authors: adi1090x
 tags: [v23.04, release, iso]
 hide_table_of_contents: true
@@ -19,19 +19,18 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-April 2023 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de abril de 2023 está disponível para download. Veja abaixo p que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated the ISO with latest packages
-- Enabled _single click activation_ on rofi menu and applets
-- Fixed _polybar sound/volume modules not updating_ issue
-- Replaced `picom-ibhagwan-git` with official `picom`, But...
-  - There are config files added for few forks of picom.
-  - You can install `picom-jonaburg-git` from AUR, config file is already added in Archcraft.
-  - You can install `picom-ibhagwan-git` from AUR, config file is already added in Archcraft.
-  - Whichever picom fork you use, make sure you use the config file added for that, Just rename it to `picom.conf`
-  - For ex: If using `picom-jonaburg-git`, copy **picom-jonaburg.conf** to **picom.conf**
-  - You can see which compositor is currently in use in openbox (Preferences > Compositor)
-- Fixed Minor bugs, etc
+- ISO atualizada com pacotes mais novos
+- Ativado _single click activation_ no menu do Rofi e applets
+- Corrigido erro de _polybar sound/volume modules not updating_
+- Substituído `picom-ibhagwan-git` pelo oficial `picom`, mas...
+  - Arquivos adicionados para alguns forks do picom.
+  - Você pode instalar o `picom-jonaburg-git` do AUR, arquivo de configuração adicionado ao Archcraft.
+  - Qualquer fork do picom que você use, tenha certeza que o arquivo de configuração foi adicionado para ele, só renomeie-o para `picom.conf`
+  - Por ex.: se usar o `picom-jonaburg-git`, Copie **picom-jonaburg.conf** para **picom.conf**
+  - Você pode ver qual compositor está sendo usado atualmente no openbox em (Preferências > Compositor)
+- Corrigido pequenos Bugs, etc
