--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-28-release-prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-28-release-prime.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 19-news-release
-title: Archcraft Prime Release
+title: Versão Archcraft Prime
 authors: adi1090x
 tags: [prime, openbox, bspwm, i3wm, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,30 +19,30 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#c778dd">Exclusive</Highlight> **Archcraft Prime ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#c778dd">Exclusivo!</Highlight> **ISO Prime do Archcraft** está disponível para download. veja abaixo o que há de novo.
 
-**Archcraft Prime** offers every (`Not the one released after Prime`) exclusive stuff of Archcraft in ***One Single ISO***. It has [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) and [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) as well as all the exclusive wayland compositors ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
+**Archcraft Prime** oferece tudo (`Nada lançado depois do Prime`) de exclusivo do Archcraft em ***uma única ISO***. Ele tem [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) como todos os compositores wayland exclusivos ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pré instalados.
 
 <!--truncate-->
 
 ### Changelogs :
-- Created the ISO base from scratch
-- Grub2 bootloader with themes
-- Customized Plymouth & SDDM
-- Basic Applications Only, No Bloatware
-- Calamares Installer (Graphical) with ability to choose WMs/WCs
-- ABIF (CLI) Installer as secondary installer
-- Full Network Manager Support, Various VPN plugins
-- Built-in Bluetooth Support
-- Pipewire For Sound/Audio (Systemwide, Bluetooth, Jack)
-- Built-in Printer Support
-- Almost All Audio, Video and Image Codecs
-- Full File manager functionality (Mounting, Networking, Archiving, etc)
-- Built-in AUR support
-- Minimal User Interface
-- All Premium Window Managers (Openbox, Bspwm and i3wm)
-- All Exclusive Wayland Compositors (Sway, Wayfire, River, Hyprland, Newm)
-- Archcraft Icons, Themes, Wallpapers, Fonts
+- Base da ISO criada do zero
+- Bootloader Grub2 com temas
+- Plymouth & SDDM customizados
+- Apenas aplicações básicas, Sem programas desnecessários
+- Isntalados Calamares (Gráfico) podendo escolher WMs/WCs
+- Instalador ABIF (CLI) como secundário
+- Total suporte para Network Manager, vários plugins VPN
+- Suporte Bluetooth integrado
+- Pipewire para Som/Áudio (Systemwide, Bluetooth, Jack)
+- Suporte para impressora integrado
+- Quase todos os codecs de áudio, vídeo e imagem
+- total funcionalidade do gestor de arquivos (Montagem, Networking, Arquivamento, etc)
+- Suporte AUR inegrado
+- Interface do usuário mínima
+- Todos os Window Managers Premium (Openbox, Bspwm e i3wm)
+- Todos os compositores wayand exclusivos (Sway, Wayfire, River, Hyprland, Newm)
+- Ícones, temas, papéis de parede, fontes, etc. do Archcraft
 - Etc
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
+**Download :** Você pode baixar a ISO novo em [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
