--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-05-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-05-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 22-news-release
-title: July 2023 Release
+title: Versão de Julho de 2023
 authors: adi1090x
 tags: [v23.07, release, iso]
 hide_table_of_contents: true
@@ -19,25 +19,25 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-July 2023 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de julho de 2023 está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO profile with latest archiso
-- Latest base with new packages
-- Fixed `xfce-power-manager` issue (not locking the screen on lid close)
-- Fixed sddm not saving the last used session issue
-- Added a calculator app
+- Perfil da ISO atualizada com o novo archiso
+- Base mais recente com novos pacotes
+- Corrigido p erro do `xfce-power-manager` (não bloqueia a tela no lid close)
+- Corrigido erro do sddm que não salva a última sessão usada
+- Adicionado aplicativo de calculadora
 - **`Openbox WM`**
-  - Added `tint2` as alternate panel (in all themes)
-  - Ability to switch between panels
-  - Added `bluetooth` module on both panels
-  - Added a rofi `bluetooth` applet
-  - Fixed window resizing issue via each side of window
+  - Adicionado `tint2` como painel alternativo (em todos os temas)
+  - Capacidade de trocar entre os painéis
+  - Adicionado módulo `bluetooth` em ambos os painéis
+  - Adicionado um applet `bluetooth` no rofi
+  - Corrigido erro de redimensionamento de janela pela lateral da janela
   - etc
 - **`BSPWM`**
-  - Added `bluetooth` module on polybar (in all themes)
-  - Added a rofi `bluetooth` applet
+  - Adicionado o módulo `bluetooth` na polybar (em todos os temas)
+  - Adicionado um applet para `bluetooth` no rofi
   - etc
-- Many small bugs fixed.
+- Algumas correções de pequenos bugs.
