--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-11-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-11-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 24-news-release
-title: Archcraft WSE Release
+title: Versão Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,33 +19,33 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> New **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusivo!</Highlight> Nova **ISO do Archcraft Wayland Edição Especial** está diponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Essa edição especial do Archcraftvem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm) pré instalado, pré configurado e traz uma experiência wayland única no Linux.
 
 ### Changelogs :
-- Updated ISO profile with latest archiso
-- Latest base with new packages
-- Fixed sddm not saving the last used session issue
-- Added a calculator app
-- Added Welcome and Help-and-Tips App
-- Fixed Scaling issue in QT apps in wayland
+- Perfil da ISO atualizada com o novo archiso
+- Base mais recente com novos pacotes
+- Corrigido erro do sddm que não salva a última sessão usada
+- Adicionado aplicativo de calculadora
+- Adicionado aplicativo de Boas Vindas e Ajuda e dicas
+- Corrigido erro de escla nos apps QT no wayland
 - **`Sway, Wayfire, River, Hyprland`**
-  - Added `bluetooth` module on Waybar
-  - Added a rofi `bluetooth` applet
-  - Added `alacritty` terminal
-  - Added `pywal` support
-  - Improved a lot of scripts
+  - Adicionado módulo `bluetooth` na Waybar
+  - Adicionado um applet para `bluetooth` no rofi
+  - Adicionado terminal `alacritty`
+  - Adicionado suporte para `pywal`
+  - Vários scripts melhorados
   - etc
-- Many small bugs fixed.
+- Algumas correções de pequenos bugs.
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+**Download :** Você pode baixar a ISO atualizada em [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
