--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-24-release-lxde.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-24-release-lxde.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 26-news-release
-title: Archcraft LXDE Release
+title: Versão Archcraft LXDE
 authors: adi1090x
 tags: [flavor, lxde, release, iso]
 hide_table_of_contents: true
@@ -19,13 +19,13 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft LXDE is now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft LXDE está diponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO base and profile
-- Updated the ISO with latest packages
-- Added New Themes and Wallpapers
-- Fixed the directory issue on lxde-panel
-- Bug Fixes, Etc.
+- Perfil da ISO atualizada com o novo archiso
+- Base mais recente com novos pacotes
+- Adicional temas e papéis de parede
+- Corrigido erro de diretório no lxde-panel
+- Correção de bugs, etc.
