--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/10-12-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/10-12-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 27-news-release
-title: October 2023 Release
+title: Versão de outubro de 2023
 authors: adi1090x
 tags: [v23.10, release, iso]
 hide_table_of_contents: true
@@ -19,27 +19,27 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-October 2023 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de outubro de 2023 está diponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Added `archcraft-randr` app to manager display and monitors
-- Updated all window managers
-  - Clean PKGBUILDs (`with only needed deps`) and updated code
-  - Directory **openbox-themes** now merged into **openbox**, new config structure for openbox
-  - Added **example layouts** for multi-monitors in `bspwmrc` (single, two-monitors, three-monitors layouts)
-  - Added multi-monitor support in all available WMs (use `archcraft-randr`)
-  - And, more...
-- Added `wipe` ability in ABIF
-- Fixed issue with `help and tips` app
-- Removed `python2` as it's not needed anymore
-- Small improvements and bugs fixed.
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Adicionado aplicativo `archcraft-randr` para gerenciar a tela e monitores
+- Atualizados todos os window managers
+  - PKGBUILDs apagados (`com apenas as dependências necessárias`) e código atualizado
+  - Diretório **openbox-themes** agora é mesclado dentro do **openbox**, nova estrutura de configuração para openbox
+  - Adicionado **exemplos de  layouts** para multi-monitores no `bspwmrc` (layout para único, dois-monitores, três-monitores)
+  - Adicionado suporte para multi-monitor em todas as WMs disponíveis (usando `archcraft-randr`)
+  - e, mais...
+- Adicionado a habilidade de `wipe` no ABIF
+- Corrigido erro do aplicativo `ajuda e dicas`
+- Removido `python2` pois não é preciso mais
+- Pequenas melhorias e correções de bugs.
 
-> **`Info`** : Now, package update for WMs will not replace your modified configs (previously, backing-up your configs in `~/.config`).
+> **`Info`** : Agora, a atualização dos WMs will não irá repor suas configurações  modificadas (antes, era preciso salvar suas configurações em `~/.config`).
 >
-> Instead, It'll install new updates in separate directory (eg: `~/.config/openbox_pacnew_2023-10-12`), It'll be your choice to use your current config or updated one.
+> Em vez disso, irá instalar novas atualizações em diretórios separados (ex: `~/.config/openbox_pacnew_2023-10-12`), você poderá escolher usar sua configuração atual ou atualizá-la.
 >
-> You can use `meld` to merge updates in your current modified configs.
+> Você pode usar o `meld` para mesclar as atualizações nas suas configurações modificadas atuais.
