--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-08-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-08-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 30-news-release
-title: January 2024 Release
+title: Versão de Janeiro de 2024
 authors: adi1090x
 tags: [v24.01, release, iso]
 hide_table_of_contents: true
@@ -19,15 +19,15 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-January 2024 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraftde janeiro de 2024 está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Migrated `alacritty` to its new config (`yml` to `toml`)
-- Updated **all scripts** related to alacritty
-- Added `tray` module in **polybar** and fixed issue with fonts
-- Small improvements and bugs fixed.
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Atualizados todos os pacotes do Archcraft e do AUR
+- Configuração do `alacritty` migrada (`yml` para `toml`)
+- Atualizados **todos os scripts** relacionados ao alacritty
+- Adicionado o módulo `tray` na **polybar** e corrigido o erro com fontes
+- Pequenas melhorias e correções de bugs.
