--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-09-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-09-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 32-news-release
-title: Archcraft WSE Release
+title: Versão Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,31 +19,32 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> New **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusivo!</Highlight> Nova **ISO do Archcraft Wayland Edição Especial** está diponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Essa edição especial do Archcraftvem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm) pré instalado, pré configurado e traz uma experiência wayland única no Linux.
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Updated all wayland compositors
-  - Sway: fixed bugs and updated configs
-  - Wayfire: migrated to v0.8.0 and updated configs accordingly
-  - River: fixed bugs and updated configs
-  - Hyprland: using my own hyprland build for stability and updated configs to v0.34.0
-  - Newm: fixed issue with waybar gets hidden behind windows and updated configs
-- Migrated `alacritty` to its new config (`yml` to `toml`)
-- Updated **all scripts** related to alacritty
-- Small improvements and bugs fixed.
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Atualizados todos os pacotes do Archcraft e do AUR
+- Atualizados todos os compositores wayland
+  - Sway: Bugs corrigidos e configurações atualizadas
+  - Wayfire: Migrado para v0.8.0 e configurações aualizadas de acordo
+  - River: Bugs corrigidos e configurações atualizadas
+  - Hyprland: Usando minha pŕopria criação hyprland para estabilidade e configurações atualizadas para v0.34.0
+  - Newm: Corrigido o erro da waybar se escondendo atrás das janelase configurações atualizadas
+- Configuração do `alacritty` migrada (`yml` para `toml`)
+- Atualizados **todos os scripts** relacionados ao alacritty
+- Pequenas melhorias e correções de bugs.
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Download :** Você pode baixar a ISO atualizada em [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
