--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-12-release-lxde.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-12-release-lxde.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 34-news-release
-title: Archcraft LXDE Release
+title: Versão Archcraft LXDE
 authors: adi1090x
 tags: [flavor, lxde, release, iso]
 hide_table_of_contents: true
@@ -19,12 +19,12 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft LXDE is now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft LXDE está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-**`Just a regular ISO update`**
-- Updated ISO base and profile
-- Updated the ISO with latest packages
-- Bug Fixes, Etc.
+**`Apenas uma atualização comum`**
+- Atualizado a base e o perfil da ISO
+- ISO atualizada com pacotes mais recentes
+- Correção de bugs, etc.
