--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-12-release-xfce.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/01-12-release-xfce.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 33-news-release
-title: Archcraft XFCE Release
+title: Versão Archcraft XFCE
 authors: adi1090x
 tags: [flavor, xfce, release, iso]
 hide_table_of_contents: true
@@ -19,13 +19,12 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft XFCE is now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft XFCE está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-### Changelogs :
-**`Just a regular ISO update`**
-- Updated ISO base and profile
-- Updated the ISO with latest packages
-- Fixed theming issue with xfce terminal
-- Bug Fixes, Etc.
+**`Apenas uma atualização comum`**
+- Atualizado a base e o perfil da ISO
+- ISO atualizada com pacotes mais recentes
+- Correção do erro de tema do terminal xfce
+- Correção de bugs, etc.
