--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/04-06-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/04-06-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 35-news-release
-title: April 2024 Release
+title: Versão de Abril de 2024
 authors: adi1090x
 tags: [v24.04, release, iso]
 hide_table_of_contents: true
@@ -19,28 +19,28 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-April 2024 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO do Archcraft de abril de 2024 está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Update all Window Manager's Configs
-- Added latest version of `calamares` installer and it's config (_fixed autologin issue_)
-- Added a new `grub` package (_fixed issue with installation on `xfs` filesystem_)
-- Added grub hooks package (_to install grub on every update_)
-- Added `archcraft-arandr` (GUI) package to manage screen layouts (_save and restore them_)
-- Fixed QT theming issue, added configs for QT6
-- Improved thunar actions functionalities
-  - open terminal according to session
-  - open as root according to session
-  - permanently sets the wallpaper in supported sessions
-- Small improvements and bugs fixed.
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Atualizados todos os pacotes do Archcraft e do AUR
+- Todas as configurações dos Window Manager's atualizadas
+- Adicionado a última versão do instalador `calamares` e sua configuração(_corrigido o erro de autologin_)
+- Adicionado o novo pacote do `grub` (_corrigido o erro com a instalação com sistema de arquivos `xfs`_)
+- Adicionado pacotes de hooks do grub (_para instalar o grub em todas atualizações_)
+- Adicionado o pacote `archcraft-arandr` (GUI) para gerenciar os layouts de tela (_salvar e restaurar_)
+- corrigido o erro de tema QT, adicionada configuração para QT6
+- Melhoria nas ações e funcionalidade do thunar
+  - abrir o terminal de acordo com a sessão
+  - abrir como root de acordo com a sessão
+  - configurar o papel de parede permanentemente nas sessões suportadas
+- Pequenas melhorias e correções de bugs.
 
-> Run: `sudo pacman -Syyu` to update your existing installation.
+> Rode: `sudo pacman -Syyu` para atualizar sua instalação existente.
 >
-> Install `archcraft-hooks-grub` after update (needed for new grub) and remove `grub-update` package.
+> Instale `archcraft-hooks-grub` depois da atualização (necessário para o novo grub) e remova o pacote `grub-update`.
 >
-> Install `archcraft-arandr` after update (to manage screen layouts with a GUI, save and restore your layouts)
+> Instale `archcraft-arandr` depois da atualização (para gerenciar os layouts de tela com o GUI, salvar e restaurar seus layouts)
