--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/04-14-release-xfce-lxde.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/04-14-release-xfce-lxde.mdx
@@ -19,14 +19,14 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Discontinued</Highlight> **Archcraft XFCE** and **Archcraft LXDE** flavors are discontinued.
+<Highlight color="#e06b74">Descontinuado!</Highlight> **Archcraft XFCE** e **Archcraft LXDE** foram descontinuados.
 
 <!--truncate-->
 
-**Due to a very limited user-base, I've no plans on maintaining those flavors anymore.**
+**Devido a base de usuários muito limitada, eu não tenho planos de manter esses sabores mais.**
 
-You can still use the previous releases without any issues. All the updates will be provided via Arch Linux repositories anyway.
+Você pode continuar usando as versões anteriores sem nenhum problema. Todas as atualzações são providas pelos repositórios do Arch Linux de qualquer forma.
 
-So, As long as you keep updating it, You'll have everything latest and up-to-date. Except, Of course Archcraft XFCE and LXDE configs. Those are...
+Então, sempre que quiser atualizar, você terá tudo mais recente e atualizado. Exceto, claro, as configurações do Archcraft XFCE e LXDE. Eles foram...
 
-![gone](https://media1.tenor.com/m/_BtFie_gpcIAAAAd/thanos-avengers-endgame.gif)
+![embora](https://media1.tenor.com/m/_BtFie_gpcIAAAAd/thanos-avengers-endgame.gif)
