--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/10-07-release-xfce.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/10-07-release-xfce.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 09-news-release
-title: Archcraft XFCE Release
+title: Versão de Archcraft XFCE
 authors: adi1090x
 tags: [flavor, xfce, release, iso]
 hide_table_of_contents: true
@@ -19,25 +19,25 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft XFCE is now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft XFCE está disponível para download. Veja abaixo o que há de novo
 
 <!--truncate-->
 
 ### Changelogs :
-- Created the ISO base from scratch
-- Grub2 bootloader with themes
-- Customized Plymouth & SDDM
-- Full XFCE4 Desktop with Xfce goodies
-- Basic Applications Only, No Bloatware
-- Calamares Installer (Graphical)
-- Full Network Manager Support, Various VPN plugins
-- Built-in Bluetooth Support
-- Pipewire For Sound/Audio (Systemwide, Bluetooth, Jack)
-- Built-in Printer Support
-- Almost All Audio, Video and Image Codecs
-- Full File manager functionality (Mounting, Networking, Archiving, etc)
-- Built-in AUR support
-- Minimal User Interface
-- Multiple Desktop Styles
-- Archcraft Icons, Themes, Wallpapers, Fonts
+- ISO criada do zero
+- Grub2 bootloader com temas
+- Plymouth & SDDM customizados
+- Todo XFCE4 Desktop com Xfce goodies
+- Somente aplicações básicas, sem programas desnecessários
+- Instalador Calamares (Gráfico)
+- Suporte completo para Network Manager, Muitos plugins de VPN
+- Suporte para Bluetooth integrado
+- Pipewire para Som/Áudio (Systemwide, Bluetooth, Jack)
+- Suporte para impressora integrado
+- Quase todos os codes de ádio, vídeo e imagem
+- Total funcionalidade do gestor de arquivos (Montagem, Networking, Arquivamento, etc)
+- Suporte para o AUR integrado
+- Interface do usuário mínima
+- Muitos estilos de Desktop
+- Ícones, temas, Wallpapers, fontes do Archcraft
 - Etc
