--- a/i18n/pt/docusaurus-plugin-content-blog-news/2022/10-20-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2022/10-20-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 11-news-release
-title: Archcraft WSE Release
+title: Versão do Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,28 +19,28 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusive</Highlight> **ISO de Edição Especial do Archcraft Wayland** está disponível para download. Veja abaixo o que há de novo.
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Essa edição especial do Archcraft vem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm) pre-instalados, pre-configurados e provê uma experiência Linux com wayland única.
 
 <!--truncate-->
 
 ### Changelogs :
-- Created the ISO base from scratch
-- Grub2 bootloader with themes
-- Customized Plymouth & SDDM
-- Basic Applications Only, No Bloatware
-- Calamares Installer (Graphical)
-- Full Network Manager Support, Various VPN plugins
-- Built-in Bluetooth Support
-- Pipewire For Sound/Audio (Systemwide, Bluetooth, Jack)
-- Built-in Printer Support
-- Almost All Audio, Video and Image Codecs
-- Full File manager functionality (Mounting, Networking, Archiving, etc)
-- Built-in AUR support
-- Minimal User Interface
-- Multiple Wayland Compositors (Sway, Wayfire, River, Hyprland, Newm)
-- Archcraft Icons, Themes, Wallpapers, Fonts
+- ISO criada do zero
+- Grub2 bootloader com temas
+- Plymouth & SDDM customizados
+- Somente aplicações básicas, sem programas desnecessários
+- Instalador Calamares (Gráfico)
+- Suporte completo para Network Manager, Muitos plugins de VPN
+- Suporte para Bluetooth integrado
+- Pipewire para Som/Áudio (Systemwide, Bluetooth, Jack)
+- Suporte para impressora integrado
+- Quase todos os codes de ádio, vídeo e imagem
+- Total funcionalidade do gestor de arquivos (Montagem, Networking, Arquivamento, etc)
+- Suporte para o AUR integrado
+- Interface do usuário mínima
+- Multiplos compositores Wayland (Sway, Wayfire, River, Hyprland, Newm)
+- Ícones, temas, Wallpapers, fontes do Archcraft
 - Etc
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+**Download :** Você pode baixar a última versão da ISO pelo [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
