--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-22-release-lxde.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/01-22-release-lxde.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 15-news-release
-title: Archcraft LXDE Release
+title: Lançamento Archcraft LXDE
 authors: adi1090x
 tags: [flavor, lxde, release, iso]
 hide_table_of_contents: true
@@ -19,12 +19,12 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft LXDE is now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft LXDE está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO Base
-- Created New Theming System
-- User Can Create Their Own Themes Easily
-- Bug Fixes, Etc.
+- Base da ISO atualizada
+- Criado novo sistema de temas
+- Usuários podem criar seus próprios temas facilmente
+- Correção de Bugs, Etc.
