--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-02-release-xfce-lxde.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-02-release-xfce-lxde.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 17-news-release
-title: Archcraft XFCE and LXDE Release
+title: Lançamento Archcraft XFCE and LXDE
 authors: adi1090x
 tags: [flavor, xfce, lxde, release, iso]
 hide_table_of_contents: true
@@ -19,11 +19,11 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft XFCE and LXDE are now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft XFCE and LXDE Disponíveis para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-**`Just a regular ISO update`**
-- Updated the ISOs with latest packages
-- Bug Fixes, Etc.
+**`Atualização somente da ISO normal`**
+- ISO atualizada com pacotes mais novos
+- Correção de Bugs, Etc.
