--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-15-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/04-15-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 18-news-release
-title: Archcraft WSE Release
+title: Versão Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,35 +19,35 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> New **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusivo!</Highlight> Nova **ISO Archcraft Wayland Edição Especial** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Essa edição especial do Archcraft vem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre instalado, preconfigurado e traz uma experiência waylando no seu Linux.
 
 ### Changelogs :
-- Using `sddm-git` now, Solved shutdown/reboot issue
-- Using new method to boot the ISO on Nvidia Machines
-- Updated the Installers with (possible) Nvidia support
-- Updated the base system with latest packages
-- **`Updated All the wayland compositors`**
-  - Updated the config structure
-  - Added Rofi menu, applets and scripts (network, music, etc)
-  - Fixed area screenshot overlay issue
-  - Fixed nerwork-applet overlay issue in hyprland
-  - Modified the configs for waybar, wlogout and wofi (added separate colors.css file)
-  - Changes gtk themes in sway, wayfire and hyprland
-  - Updated lockscreen script in sway
-  - Added two packages for NEWM (one normal and one blur)
-  - Added spotify module in waybar in all WCs
-  - Animated MPD and spotify modules in waybar
-- Many Bug fixes, etc
+- Usando `sddm-git` agora, Problema de shutdown/reboot resolvido
+- Usando novo metodo de boot em máquinas Nvidia
+- Instaladores atualizados com (possível) suporte Nvidia
+- Atualizada a base do sistema com pacotes mais novos
+- **`Todos compisitores wayland atualizados`**
+  - Estrutura de configuração atualizada
+  - Adicionado o menu Rofi, applets e scripts (network, música, etc)
+  - Problema de sobreposição da área de screenshot resolvido
+  - corrigido erro da sobreposição do applet do network no hyprland
+  - Configurações para waybar, wlogout e wofi modificadas (adicionado arquivos de cor.css separados)
+  - Troca de temas Gtk no sway, wayfire e hyprland
+  - Script de lockscreen atualizado no sway
+  - Adicionados dois pacotes para NEWM (um normal e um blur)
+  - Adicionado um módulo do Spotify na waybar em todos os WCs
+  - Módulos do NPD e Spotify animados na waybar
+- Alguns bugs corrigidos, etc
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+**Download :** Você pode baixar a nova ISO em [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Resgate sua ISO atualizada:**  Siga os passos abaixo para resgatar os arquivos atualizados (ou fazer o download novamente) de graça:
+- faça login na sua conta da Ko-fi
+- Vá para o seu `Histórico de pagamentos Ko-fi`
+- Selecione Suas compras
+- Click em `Ver Detalhes`
+- Depois, Click em `Ver Conteúdo` para baixar os arquivos atualizados.
