--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/05-06-release-prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/05-06-release-prime.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 21-news-release
-title: Archcraft Prime Release
+title: Versão Archcraft Prime
 authors: adi1090x
 tags: [prime, openbox, bspwm, i3wm, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,20 +19,20 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#c778dd">Exclusive</Highlight> New **Archcraft Prime ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#c778dd">Exclusivo!</Highlight> Nova **ISO Prime do Archcraft ** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-**Archcraft Prime** offers every (`Not the one released after Prime`) exclusive stuff of Archcraft in ***One Single ISO***. It has [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) and [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) as well as all the exclusive wayland compositors ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
+**Archcraft Prime** oferece todas (`Nada lançado depois do Prime`) as coisas exclusivas do Archcraft em ***uma única ISO***. Ele tem [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) como também todos os compositores wayland ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
 
 ### Changelogs :
-- Nothing Much, Just Updated The ISO with Fixed NEWM
+- Nada demais, só atualização da ISO com correção do NEWM
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
+**Download :** Você pode baixar a nova ISO em [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
