--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/05-06-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/05-06-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 20-news-release
-title: Archcraft WSE Release
+title: Versão Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,23 +19,23 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> New **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusivo!</Highlight> Nova **ISO do Archcraft Wayland Special Edition** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Essa edição especial do Archcraft vem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm) pré instalado, pré configurado e traz uma experiência wayland única no Linux.
 
 ### Changelogs :
-- Fixed pacman-init issue
-- Added ability to choose desktop in the installer (calamares)
-- Fixed auto-login issue
+- Problema do pacman-init corrigido
+- Adicionado a possibilidade de escolher o desktop no instalador (calamares)
+- Corrigido erro de auto-login
 - etc
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+**Download :** Você pode baixar a ISO atualizada em [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
