--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-10-release-prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-10-release-prime.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 23-news-release
-title: Archcraft Prime Release
+title: Versão Archcraft Prime
 authors: adi1090x
 tags: [prime, openbox, bspwm, i3wm, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,49 +19,49 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#c778dd">Exclusive</Highlight> New **Archcraft Prime ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#c778dd">Exclusivo!</Highlight> Nova **ISO Prime do Archcraft** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-**Archcraft Prime** offers every (`Not the one released after Prime`) exclusive stuff of Archcraft in ***One Single ISO***. It has [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) and [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) as well as all the exclusive wayland compositors ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
+**Archcraft Prime** oferece todas (`Nada lançado depois do Prime`) as coisas exclusivas do Archcraft em ***uma única ISO***. Ele tem [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) assim como todos os compositores wayland exclusivos ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
 
 ### Changelogs :
-- Updated ISO profile with latest archiso
-- Latest base with new packages
-- Fixed `xfce-power-manager` issue (not locking the screen on lid close)
-- Fixed sddm not saving the last used session issue
-- Added a calculator app
-- Added Welcome and Help-and-Tips App
-- Fixed Scaling issue in QT apps in wayland
+- Perfil da ISO atualizada com o novo archiso
+- Base mais recente com novos pacotes
+- Corrigido o erro do `xfce-power-manager` (não bloqueia a tela no lid close)
+- Corrigido erro do sddm que não salva a última sessão usada
+- Adicionado aplicativo de calculadora
+- Adicionado aplicativo de Boas Vindas e Ajuda e dicas
+- Corrigido erro de escla nos apps QT no wayland
 - **`Openbox WM`**
-  - Added `tint2` as alternate panel (in all themes)
-  - Ability to switch between panels
-  - Added `bluetooth` module on both panels
-  - Added a rofi `bluetooth` applet
-  - Fixed window resizing issue via each side of window
+  - Adicionado `tint2` como painel alternativo (em todos os temas)
+  - Capacidade de trocar entre os painéis
+  - Adicionado módulo `bluetooth` em ambos os painéis
+  - Adicionado um applet `bluetooth` no rofi
+  - Corrigido erro de redimensionamento de janela pela lateral da janela
   - etc
 - **`BSPWM`**
-  - Added `bluetooth` module on polybar (in all themes)
-  - Added a rofi `bluetooth` applet
+  - Adicionado o módulo `bluetooth` na polybar (em todos os temas)
+  - Adicionado um applet para `bluetooth` no rofi
   - etc
 - **`I3wm`**
-  - Added `bluetooth` module on polybar (in all themes)
-  - Added a rofi `bluetooth` applet
+   - Adicionado o módulo `bluetooth` na polybar (em todos os temas)
+  - Adicionado um applet para `bluetooth` no rofi
   - etc
 - **`Sway, Wayfire, River, Hyprland`**
-  - Added `bluetooth` module on Waybar
-  - Added a rofi `bluetooth` applet
-  - Added `alacritty` terminal
-  - Added `pywal` support
-  - Improved a lot of scripts
+  - Adicionado módulo `bluetooth` na Waybar
+  - Adicionado um applet para `bluetooth` no rofi
+  - Adicionado terminal `alacritty`
+  - Adicionado suporte para `pywal`
+  - Vários scripts melhorados
   - etc
-- Many small bugs fixed.
+- Algumas correções de pequenos bugs.
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
+**Download :** Você pode baixar a ISO atualizada em [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+***Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
