--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-21-release-xfce.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/07-21-release-xfce.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 25-news-release
-title: Archcraft XFCE Release
+title: Versão Archcraft XFCE
 authors: adi1090x
 tags: [flavor, xfce, release, iso]
 hide_table_of_contents: true
@@ -19,13 +19,13 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-New ISO of Archcraft XFCE is now available to download. Read the changelogs below to know what's new.
+Nova ISO do Archcraft XFCE está diponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO base and profile
-- Updated the ISO with latest packages
-- Added New Themes and Wallpapers
-- Fixed the directory issue on xfce-panel
-- Bug Fixes, Etc.
+- Perfil da ISO atualizada com o novo archiso
+- Base mais recente com novos pacotes
+- Adicional temas e papéis de parede
+- Corrigido erro de diretório no xfce-panel
+- Correção de bugs, etc.
