--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/10-14-release-prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/10-14-release-prime.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 28-news-release
-title: Archcraft Prime Release
+title: Versão Archcraft Prime
 authors: adi1090x
 tags: [prime, openbox, bspwm, i3wm, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,38 +19,39 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#c778dd">Exclusive</Highlight> New **Archcraft Prime ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#c778dd">Exclusivo!</Highlight> Nova **ISO Archcraft Prime** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-**Archcraft Prime** offers every (`Not the one released after Prime`) exclusive stuff of Archcraft in ***One Single ISO***. It has [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) and [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) as well as all the exclusive wayland compositors ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
+**Archcraft Prime** oerece todas (`nada lançado depois do Prime`) as coisas exclusivas do Archcraft em ***uma única ISO***. Ele tem [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) assim como també todos os compositores wayland exclusivos ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Added `archcraft-randr` app to manager display and monitors (Only X11)
-- Updated all window managers
-  - Clean PKGBUILDs (`with only needed deps`) and updated code
-  - Directory **openbox-themes** now merged into **openbox**, new config structure for openbox
-  - Added **example layouts** for multi-monitors in `bspwmrc` (single, two-monitors, three-monitors layouts)
-  - Added multi-monitor support in all available WMs (use `archcraft-randr`)
-- Updated all wayland compositors
-  - Added better example for multi-monitor support in...
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- - Adicionado aplicativo `archcraft-randr` para gerenciar a tela e monitores
+ (Somente X11)
+- Atualizados todos os window managers
+  - PKGBUILDs apagados (`com apenas as dependências necessárias`) e código atualizado
+  - Diretório **openbox-themes** agora é mesclado dentro do **openbox**, nova estrutura de configuração para openbox
+  - Adicionado **exemplos de  layouts** para multi-monitores no `bspwmrc` (layout para único, dois-monitores, três-monitores)
+  - Adicionado suporte para multi-monitor em todas as WMs disponíveis (usando `archcraft-randr`)
+- Atualizados todos os compositores wayland
+  - Adicionado um exemplo melhor para o suporte multi-monitor em...
     - Sway: `~/.config/sway/sway-output`
     - Wayfire: `~/.config/wayfire.ini`
     - River: `~/.config/river/init`
     - Hyprland: `~/.config/hypr/hyprland.conf`
     - Newm: `~/.config/newm/config.py`
-- Added `wipe` ability in ABIF
-- Fixed issue with `help and tips` app
-- Removed `python2` as it's not needed anymore
-- Small improvements and bugs fixed.
+- Adicionado a habilidade de `wipe` no ABIF
+- Corrigido erro do aplicativo `ajuda e dicas`
+- Removido `python2` pois não é preciso mais
+- Pequenas melhorias e correções de bugs.
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
+**Download :** Você pode baixar a ISO atualizada em [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
