--- a/i18n/pt/docusaurus-plugin-content-blog-news/2023/10-15-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2023/10-15-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 29-news-release
-title: Archcraft WSE Release
+title: Versão Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,31 +19,31 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> New **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusivo!</Highlight> Nova **ISO do Archcraft Wayland Edição Especial** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Esa edição especial vem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm) pré instalado, pré confighurado e traz uma experiência wayland única em seu Linux.
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Updated all wayland compositors
-  - Added better example for multi-monitor support in...
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Atualizados todos os compositores wayland
+  - Adicionado um exemplo melhor para o suporte multi-monitor em...
     - Sway: `~/.config/sway/sway-output`
     - Wayfire: `~/.config/wayfire.ini`
     - River: `~/.config/river/init`
     - Hyprland: `~/.config/hypr/hyprland.conf`
     - Newm: `~/.config/newm/config.py`
-- Added `wipe` ability in ABIF
-- Fixed issue with `help and tips` app
-- Small improvements and bugs fixed.
+- Adicionado a habilidade de `wipe` no ABIF
+- Corrigido erro do aplicativo `ajuda e dicas`
+- Pequenas melhorias e correções de bugs.
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+**Download :** Você pode baixar a ISO atualizada em [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
