--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/04-10-release-wse.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/04-10-release-wse.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 37-news-release
-title: Archcraft WSE Release
+title: Versão Archcraft WSE
 authors: adi1090x
 tags: [wse, wayland, sway, wayfire, river, hyprland, newm, release, iso]
 hide_table_of_contents: true
@@ -19,35 +19,35 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#e06b74">Exclusive</Highlight> New **Archcraft Wayland Special Edition ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#e06b74">Exclusivo!</Highlight> Nova **ISO do Archcraft Wayland Edição Especial** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-This special edition of Archcraft comes with [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm) pre-installed, pre-configured and provides you a wayland only Linux experience.
+Essa edição especial do Archcraftvem com [`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm) pré instalado, pré configurado e traz uma experiência wayland única no Linux.
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Added latest version of `calamares` installer and it's config (_fixed autologin issue_)
-- Added a new `grub` package (_fixed issue with installation on `xfs` filesystem_)
-- Added grub hooks package (_to install grub on every update_)
-- Fixed QT theming issue, added configs for QT6
-- Updated all wayland compositors :
-  - Added `open-as-root` rofi applet in all WCs
-  - Hyprland: added `hyprlock` & `hypridle` and updated configs to v0.38.0
-  - Newm: fixed issue with rofi app-id and session names
-- Improved thunar actions functionalities
-  - open terminal according to session
-  - open as root according to session
-  - permanently sets the wallpaper in supported sessions
-- Small improvements and bugs fixed.
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Atualizados todos os pacotes do Archcraft e do AUR
+- Adicionado a última versão do instalador `calamares` e sua configuração (_Erro de autologin corrigido_)
+- Adicionado novo pacote do `grub` (_Erro de instalação no sistema de arquivos `xfs` corrigido_)
+- Pacote de hooks do grub adicionados (_para instalar o grub em toda atualização_)
+- Erro de tema QT corrigido, configurações para QT6 adicionadas
+- Todos os compositores wayland atualizados:
+  - Adicionado o applet do rofi `open-as-root` em todos os WCs
+  - Hyprland: Adicionado `hyprlock` & `hypridle` e configurações atualizadas para v0.38.0
+  - Newm: Erro de app-id do rofi e nome da sessão corrigidos
+- Ações e funcionalidades do thunar melhorados
+  - Abre o terminal de acordo com a sessão
+  - Abrir como root de acordo com a sessão
+  - Permanece com o papel de parede nas sessões suportadas
+- Pequenas melhorias e correções de bugs.
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
+**Download :** Você pode baixar a ISO atualizada em [**`ko-fi`** ☕](https://ko-fi.com/s/213becbf00)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
