--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/07-01-release.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/07-01-release.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 39-news-release
-title: July 2024 Release
+title: Versão de Julho de 2024
 authors: adi1090x
 tags: [v24.07, release, iso]
 hide_table_of_contents: true
@@ -19,18 +19,18 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-July 2024 ISO of Archcraft is now available to download. Read the changelogs below to know what's new.
+ISO de julho de 2024 do Archcraft está diponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Update Openbox Configs
-- Added Firewall (`ufw`) with GUI (`gufw`)
-- Added `apparmor` for MAC (_mandatory access control_)
-- Replaced rofi with ibonn's rofi fork, fixed focusing issue in wayland compositors
-- Small improvements and bugs fixed.
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Atualizados todos os pacotes do Archcraft e do AUR
+- Configurações do Openbox atualizadas
+- Adicionado o Firewall (`ufw`) com GUI (`gufw`)
+- Adicionado `apparmor` para MAC (_controle de acesso mandatório_)
+- Rofi trocado pelo fork do ibonn, erro de foco no wayland corrigido
+- Pequenas melhorias e correções de bugs.
 
-> Run: `sudo pacman -Syyu` to update your existing installation.
+> Rode: `sudo pacman -Syyu` para atualizar sua instalação existente.
