--- a/i18n/pt/docusaurus-plugin-content-docs/current/contrib/contributors.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/contrib/contributors.mdx
@@ -3,23 +3,24 @@ sidebar_position: 5
 hide_table_of_contents: true
 ---
 
-# Contributors
+# Contribuidores
 
-### Owner / Developer / Maintainer
+### Dono / Desenvolvedor / Mantenedor
 - **Aditya Shakya** ([@adi1090x](https://github.com/adi1090x))
-  - Created Archcraft, Keeping it updated and maintained.
-  - Created this wiki, updating and maintaining it.
+  - Criou o Archcraft, mantêm atualizado
+  - Criou essa wiki, atualiza e a mantêm.
 
-### Contributors
+### Contribuidores
 
-- **Translators** (previous version of wiki)
-  - 🇫🇷 The [French version](https://wiki.archcraft.io/fr/) is translated by [Arnae](https://www.github.com/Archenagechan)
-  - 🇵🇱 The [Polish version](https://wiki.archcraft.io/pl/) is translated by [Keyitdev](https://www.github.com/Keyitdev)
-  - 🇹🇷 The [Turkish version](https://wiki.archcraft.io/tr/) is translated by [Levent Can Yılmaz](https://github.com/lvntcnylmz)
-  - 🇵🇹 The [Brazilian portuguese version](https://wiki.archcraft.io/pt-BR/) is translated by [Gean Gonçalves](https://github.com/gean634n)
-  - 🇨🇳 The [Simplified Chinese version](https://wiki.archcraft.io/zh/) is translated by [Wang Zhihong](https://github.com/TOLIE-OFFICIAL)
+- **Tradutores** (versão anterior da wiki)
+  - 🇫🇷 A [versão francesa](https://wiki.archcraft.io/fr/) foi traduzida por [Arnae](https://www.github.com/Archenagechan)
+  - 🇵🇱 A [versão polonesa](https://wiki.archcraft.io/pl/) foi traduzida por [Keyitdev](https://www.github.com/Keyitdev)
+  - 🇹🇷 A [versão turca](https://wiki.archcraft.io/tr/) foi traduzida por [Levent Can Yılmaz](https://github.com/lvntcnylmz)
+  - 🇵🇹 A [versão brasileira](https://wiki.archcraft.io/pt-BR/) foi traduzida por [Gean Gonçalves](https://github.com/gean634n)
+  - 🇨🇳 A [versão chinesa simplificada](https://wiki.archcraft.io/zh/) foi traduzida por [Wang Zhihong](https://github.com/TOLIE-OFFICIAL)
 
-- **Editors** (previous version of wiki)
-  - [Dhushanthan](https://github.com/Z3r0Tw0-ZT) : Added keybindings for `hyprland`, `bspwm` and `qtile`	
-  - [Deathemonic](https://github.com/Deathemonic) : Added keybindings for `xmonad` and `berry`
-  - [Arnae](https://www.github.com/Archenagechan) : Added keybindings for `bspwm`, `openbox`, `dwm` and `i3wm`
+- **Editores** (versão anterior da wiki)
+  - [Dhushanthan](https://github.com/Z3r0Tw0-ZT) : Adicionou atalhos de teclado para `hyprland`, `bspwm` e `qtile`	
+  - [Deathemonic](https://github.com/Deathemonic) : Adicionou atalhos de teclado para `xmonad` e `berry`
+  - [Arnae](https://www.github.com/Archenagechan) : Adicionou atalhos de teclado para `bspwm`, `openbox`, `dwm` e `i3wm`
+S
